fix Harry Potter logo out of bounds

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ body {
   margin: auto;
   background-color: #383842;
   min-height: 100vh;
-  width: 80%;
+  width: 65%;
 }
 
 header {
@@ -20,7 +20,8 @@ header {
 header img {
   color: white;
   position: absolute;
-  height: 50%;
+  max-height: 50%;
+  max-width: 50%;
   margin: 0;
   top: 50%;
   left: 50%;
